--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jack Ryan</title>
+    <title>Naman Upadhyay</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
             <h1>Jack Ryan</h1>
             <nav>
                 <ul>
-                    <li><a href="#about">About me</a></li>
+                    <li><a href="#about">my details</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#certificate">Learnings</a></li>
 
