--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header >
         <div class="nav">
-            <h1>Jack Ryan</h1>
+            <h1>NamaN upadhyay</h1>
             <nav>
                 <ul>
                     <li><a href="#about">my details</a></li>
@@ -28,8 +28,8 @@
             <img src="https://images.unsplash.com/photo-1511367461989-f85a21fda167?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZmlsZXxlbnwwfHwwfHx8MA%3D%3D" alt="Profile Pic" class="profile-img">
             <div class="bio">
                 <h2>Hello👋</h2>
-                <h2>I am Jack Ryan</h2>
-                <p>An aspiring engineer, Jack Ryan is driven by curiosity and hands-on learning. He enjoys exploring new technologies and pushing the boundaries of what's possible.</p>
+                <h2>I am Naman Sherr</h2>
+                <p>An aspiring jungle ka raja , Jack Ryan is driven by curiosity and hands-on learning. He enjoys exploring new technologies and pushing the boundaries of what's possible.</p>
                 
 
             </div>
