--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="bio">
                 <h2>Hello👋</h2>
                 <h2>I am Naman Sherr</h2>
-                <p>An aspiring jungle ka raja , Jack Ryan is driven by curiosity and hands-on learning. He enjoys exploring new technologies and pushing the boundaries of what's possible.</p>
+                <p>An Second year engineering student , Naman is driven by curiosity and hands-on learning. He enjoys exploring new technologies and pushing the boundaries of what's possible.</p>
                 
 
             </div>
